# pindouHelper

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-29-pindou-pattern-generator.md
docs/superpowers/specs/: 2026-06-29-pindou-pattern-generator-design.md
scripts/: fetch_palette.py
src/pindou/: __init__.py  app.py  bom.py  color.py  editor.py  palette.py  quantize.py  render.py  sizing.py
src/pindou/data/: __init__.py  mard.csv
tests/: conftest.py  test_app_smoke.py  test_bom.py  test_color.py  test_editor.py  test_palette.py  test_quantize.py  test_render.py  test_sizing.py
